--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # H2 설정
-spring.datasource.url=jdbc:h2:tcp://localhost/~/springboot-jpa-study
+spring.datasource.url=jdbc:h2:tcp://localhost/D:/IDE/h2-database/study-springboot-jpa
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
@@ -7,7 +7,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 # JPA 설정
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
-
 
 # Log 설정
 logging.level.org.hibernate.SQL=debug
